<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>be.sddevelopment</groupId>
  <artifactId>code-utils</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <description>
    A set of tools and utility classes, aimed at making it easier for developers to write their code
    in a clean and concise manner.
    These utilities will mostly be generic implementations that provide a quicker way to implement
    useful design patterns.
  </description>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub SDDevelopment Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/sddevelopment-be/coding-utils</url>
    </repository>
  </distributionManagement>

  <modules>
    <module>commons</module>
    <module>commons-testing</module>
  </modules>

  <properties>
    <sonar.organization>sddevelopment-be</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.projectKey>sddevelopment_coding-utils</sonar.projectKey>
    <sonar.coverage.jacoco.xmlReportPaths>${jacoco.build.dir}/jacoco.xml
    </sonar.coverage.jacoco.xmlReportPaths>
    <sonar.coverage.exclusions>**/*.html</sonar.coverage.exclusions>
    <sonar.cpd.exclusions>**/*.html</sonar.cpd.exclusions>
    <jacoco.build.dir>${project.build.directory}/jacoco</jacoco.build.dir>

    <java.version>21</java.version>
    <junit.jupiter.version>5.11.0</junit.jupiter.version>
    <assertj.version>3.26.3</assertj.version>
    <lombok.version>1.18.32</lombok.version>
    <archunit.version>1.3.0</archunit.version>
  </properties>

  <organization>
    <name>SD Development</name>
    <url>https://www.sddevelopment.be</url>
  </organization>
  <developers>
    <developer>
      <name>Stijn Dejongh</name>
      <organization>SD Development</organization>
      <organizationUrl>http://www.sddevelopment.be</organizationUrl>
      <roles>
        <role>Project maintainer</role>
      </roles>
    </developer>
  </developers>

  <dependencyManagement>
    <dependencies>
      <!-- BEGIN UTIL SCOPE -->
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.15.0</version>
      </dependency>

      <!-- BEGIN TEST SCOPE -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>${junit.jupiter.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>${junit.jupiter.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tngtech.archunit</groupId>
        <artifactId>archunit-junit5-api</artifactId>
        <version>${archunit.version}</version>
        <scope>test</scope>
      </dependency>
      <!-- END UTIL SCOPE -->
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.sonarsource.scanner.maven</groupId>
          <artifactId>sonar-maven-plugin</artifactId>
          <version>3.9.1.2184</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.5.0</version>
        <configuration>
          <stylesheet>maven</stylesheet>
          <javadocDirectory>commons/src/main/javadoc</javadocDirectory>
          <addStylesheets>
            <resources>/styles/stylesheet.css</resources>
          </addStylesheets>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok-maven-plugin</artifactId>
        <version>1.18.20.0</version>
        <configuration>
          <encoding>UTF-8</encoding>
          <sourceDirectory>commons/src/main/java</sourceDirectory>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <show>public</show>
          <nohelp>true</nohelp>
          <reportOutputDirectory>docs/javadoc</reportOutputDirectory>
          <destDir>.</destDir>
          <stylesheet>maven</stylesheet>
          <stylesheetfile>${project.basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>
          <defaultVersion>${project.version}</defaultVersion>
          <sourcepath>${project.basedir}/target/generated-sources/delombok</sourcepath>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>2.0.0</version>
        <configuration>
          <verbose>false</verbose>
          <addSvnKeyWords>false</addSvnKeyWords>
          <organizationName>${project.organization.name}</organizationName>
          <inceptionYear>2020</inceptionYear>
          <emptyLineAfterHeader>true</emptyLineAfterHeader>
          <writeVersions>true</writeVersions>
          <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
          <licenseName>eupl_v1_1</licenseName>
        </configuration>
        <executions>
          <execution>
            <id>first</id>
            <goals>
              <goal>update-file-header</goal>
            </goals>
            <phase>process-sources</phase>
            <configuration>
              <licenseName>eupl_v1_1</licenseName>
              <roots>
                <root>src/main/java</root>
                <root>src/test</root>
              </roots>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <dependencies>
          <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
          </dependency>
        </dependencies>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.12</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <!-- attached to Maven test phase -->
          <execution>
            <id>report</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>report</goal>
            </goals>
            <configuration>
              <dataFile>target/jacoco.exec</dataFile>
              <outputDirectory>target/jacoco</outputDirectory>
            </configuration>
          </execution>
        </executions>
        <configuration>
          <excludes>
            <exclude>be/sddevelopment/commons/constants/**/*.class</exclude>
          </excludes>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <reportOutputDirectory>docs/javadoc</reportOutputDirectory>
          <destDir>javadoc</destDir>
          <stylesheet>maven</stylesheet>
          <stylesheetfile>${project.basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>
        </configuration>
        <reportSets>
          <reportSet>
            <id>aggregate</id>
            <inherited>false</inherited>
            <reports>
              <report>aggregate</report>
            </reports>
          </reportSet>
          <reportSet>
            <id>default</id>
            <reports>
              <report>javadoc</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>
</project>
